# tetris-cli

./: .gitignore  README.md  pyproject.toml
src/tetris/: __init__.py  blocks.py  draw.py  main.py  movement.py  well.py
tests/: test_blocks.py  test_draw.py  test_main.py  test_movement.py  test_well.py
