[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "Classic tetris clone for terminal."
authors = ["Bruno M. Pacheco <mpacheco.bruno@gmail.com>"]
readme = "README.md"
keywords = ["tetris"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
