[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "Classic tetris clone for terminal."
authors = ["Bruno M. Pacheco <mpacheco.bruno@gmail.com>"]
readme = "README.md"
keywords = ["tetris"]

[tool.poetry.scripts]
tetris-debug = "tetris.main:main"

[tool.poetry.dependencies]
python = "^3.8"
asciimatics = "^1.13.0"
click = "^8.1.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
